feat: SEO ultra-optimizado con servicios reales

--- a/index.html
+++ b/index.html
@@ -1,13 +1,135 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es-MX" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dra. Blanca Romero - Medicina Estética y Regenerativa</title>
-    <meta name="description" content="Especialista en medicina estética y regenerativa. Belleza regenerativa, bienestar integral." />
-    <link rel="icon" href="/favicon.ico" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
+    <!-- ✅ Título SEO: Palabras clave + ubicación + especialidad -->
+    <title>Dra. Blanca Romero | Medicina Estética y Regenerativa en Tijuana: Sueroterapia IV, Células Madre, Pellet Hormonal y Placenta</title>
+
+    <!-- ✅ Meta Description: Detallada, con keywords y llamado a acción -->
+    <meta
+      name="description"
+      content="Clínica de la Dra. Blanca Romero en Tijuana: especialista en sueroterapia IV (Rejuvemax, Glutatión, NAD+), terapia con células madre para enfermedades autoinmunes, implante de placenta liofilizada y pellet hormonal para hombres y mujeres. Resultados naturales, seguros y personalizados. Agende su consulta hoy."
+    />
+
+    <!-- ✅ Open Graph (ideal para WhatsApp e Instagram donde compartes) -->
+    <meta property="og:title" content="Dra. Blanca Romero | Tratamientos Regenerativos en Tijuana" />
+    <meta
+      property="og:description"
+      content="Sueroterapia IV, células madre, placenta liofilizada y pellet hormonal. Especialista en medicina estética y regenerativa con enfoque personalizado en Tijuana."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://dra-blancaromero.com" />
+    <meta property="og:image" content="/doctora-blanca-romero.webp" />
+    <meta property="og:image:alt" content="Dra. Blanca Romero - Médica especialista en estética y regeneración" />
+    <meta property="og:locale" content="es_MX" />
+    <meta property="og:site_name" content="Dra. Blanca Romero" />
+
+    <!-- ✅ Twitter Card (para TikTok y X) -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Tratamientos Regenerativos con la Dra. Blanca Romero" />
+    <meta
+      name="twitter:description"
+      content="Sueroterapia IV, células madre, pellet hormonal y placenta liofilizada en Tijuana. Resultados visibles y duraderos."
+    />
+    <meta name="twitter:image" content="/doctora-blanca-romero.webp" />
+    <meta name="twitter:image:alt" content="Dra. Blanca Romero - Clínica de Medicina Estética y Regenerativa" />
+
+    <!-- ✅ Canonical URL -->
+    <link rel="canonical" href="https://dra-blancaromero.com" />
+
+    <!-- ✅ Favicon -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+
+    <!-- ✅ Preload de imagen crítica (mejora LCP) -->
+    <link rel="preload" as="image" href="/doctora-blanca-romero.webp" imagesrcset="/doctora-blanca-romero.webp 1x" />
+
+    <!-- ✅ Seguridad y buenas prácticas -->
+    <meta name="referrer" content="strict-origin-when-cross-origin" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- ✅ Structured Data (Schema.org) - Optimizado con tus servicios reales -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "MedicalBusiness",
+      "name": "Dra. Blanca Romero",
+      "description": "Clínica especializada en medicina estética y regenerativa: sueroterapia IV, terapia con células madre, implante de placenta liofilizada y pellet hormonal en Tijuana.",
+      "url": "https://dra-blancaromero.com",
+      "logo": "https://dra-blancaromero.com/logo.webp",
+      "image": "https://dra-blancaromero.com/doctora-blanca-romero.webp",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Calzada del Tecnológico #13999, Interior B-104",
+        "addressLocality": "Tijuana",
+        "addressRegion": "BC",
+        "postalCode": "22420",
+        "addressCountry": "MX"
+      },
+      "telephone": "+526645748899",
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "telephone": "+526645748899",
+        "contactType": "customer service",
+        "email": "soy_tudoctora@hotmail.com",
+        "availableLanguage": "Spanish"
+      },
+      "openingHoursSpecification": {
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": [
+          "Monday",
+          "Tuesday",
+          "Wednesday",
+          "Thursday",
+          "Friday"
+        ],
+        "opens": "09:00",
+        "closes": "16:00"
+      },
+      "sameAs": [
+        "https://www.instagram.com/drablankitarom/",
+        "https://www.tiktok.com/@drablankitaromero"
+      ],
+      "medicalSpecialty": [
+        "Estética Médica",
+        "Medicina Regenerativa",
+        "Endocrinología",
+        "Terapias Intravenosas"
+      ],
+      "availableService": [
+        {
+          "@type": "MedicalProcedure",
+          "name": "Sueroterapia IV",
+          "description": "Administración intravenosa de vitaminas y nutrientes: Rejuvemax, Rejuvecell, Glutatión, NAD+, Quelación y Elixir Oncomax. Para fatiga, resaca, inmunidad y apoyo oncológico.",
+          "performer": "Dra. Blanca Romero"
+        },
+        {
+          "@type": "MedicalProcedure",
+          "name": "Terapia con Células Madre",
+          "description": "Regeneración celular para enfermedades autoinmunes (lupus, artritis), diabetes, degenerativas y uso estético. Aplicación intravenosa personalizada.",
+          "performer": "Dra. Blanca Romero"
+        },
+        {
+          "@type": "MedicalProcedure",
+          "name": "Implante de Placenta Liofilizada",
+          "description": "Bioregenerador subdérmico para menopausia, climaterio masculino, fatiga crónica, autoinmunidad y antienvejecimiento. Liberación gradual de factores de crecimiento.",
+          "performer": "Dra. Blanca Romero"
+        },
+        {
+          "@type": "MedicalProcedure",
+          "name": "Pellet Hormonal",
+          "description": "Implante de testosterona (hombres) o estrógenos/progesterona (mujeres). Equilibrio hormonal por 6 meses: mejora libido, energía, masa muscular y sueño.",
+          "performer": "Dra. Blanca Romero"
+        }
+      ]
+    }
+    </script>
   </head>
-  <body class="bg-black">
+
+  <body class="bg-black antialiased">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
