feat: SEO completo con Schema.org y redes sociales

--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-    <!-- ✅ Título SEO: Palabras clave + ubicación + especialidad -->
-    <title>Dra. Blanca Romero | Medicina Estética y Regenerativa en Tijuana: Sueroterapia IV, Células Madre, Pellet Hormonal y Placenta</title>
+    <!-- ✅ Título SEO: palabras clave + ubicación -->
+    <title>Dra. Blanca Romero | Medicina Estética y Regenerativa en Tijuana</title>
 
-    <!-- ✅ Meta Description: Detallada, con keywords y llamado a acción -->
+    <!-- ✅ Meta description optimizada con servicios reales -->
     <meta
       name="description"
-      content="Clínica de la Dra. Blanca Romero en Tijuana: especialista en sueroterapia IV (Rejuvemax, Glutatión, NAD+), terapia con células madre para enfermedades autoinmunes, implante de placenta liofilizada y pellet hormonal para hombres y mujeres. Resultados naturales, seguros y personalizados. Agende su consulta hoy."
+      content="Clínica de la Dra. Blanca Romero en Tijuana: especialista en sueroterapia IV, células madre, implante de placenta liofilizada y pellet hormonal para hombres y mujeres. Resultados naturales, seguros y personalizados."
     />
 
-    <!-- ✅ Open Graph (ideal para WhatsApp e Instagram donde compartes) -->
+    <!-- ✅ Open Graph — ideal para WhatsApp e Instagram -->
     <meta property="og:title" content="Dra. Blanca Romero | Tratamientos Regenerativos en Tijuana" />
     <meta
       property="og:description"
-      content="Sueroterapia IV, células madre, placenta liofilizada y pellet hormonal. Especialista en medicina estética y regenerativa con enfoque personalizado en Tijuana."
+      content="Sueroterapia IV, células madre, placenta liofilizada y pellet hormonal. Especialista en medicina estética y regenerativa con enfoque personalizado."
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://dra-blancaromero.com" />
@@ -27,7 +27,7 @@
     <meta property="og:locale" content="es_MX" />
     <meta property="og:site_name" content="Dra. Blanca Romero" />
 
-    <!-- ✅ Twitter Card (para TikTok y X) -->
+    <!-- ✅ Twitter Card — para TikTok y X -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Tratamientos Regenerativos con la Dra. Blanca Romero" />
     <meta
@@ -51,13 +51,13 @@
     <meta name="theme-color" content="#000000" />
     <meta name="robots" content="index, follow" />
 
-    <!-- ✅ Structured Data (Schema.org) - Optimizado con tus servicios reales -->
+    <!-- ✅ Structured Data (Schema.org) — clave para Google -->
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "MedicalBusiness",
       "name": "Dra. Blanca Romero",
-      "description": "Clínica especializada en medicina estética y regenerativa: sueroterapia IV, terapia con células madre, implante de placenta liofilizada y pellet hormonal en Tijuana.",
+      "description": "Clínica especializada en medicina estética y regenerativa en Tijuana: sueroterapia IV, células madre, implante de placenta liofilizada y pellet hormonal.",
       "url": "https://dra-blancaromero.com",
       "logo": "https://dra-blancaromero.com/logo.webp",
       "image": "https://dra-blancaromero.com/doctora-blanca-romero.webp",
@@ -96,34 +96,14 @@
       "medicalSpecialty": [
         "Estética Médica",
         "Medicina Regenerativa",
-        "Endocrinología",
-        "Terapias Intravenosas"
+        "Terapias Intravenosas",
+        "Endocrinología Funcional"
       ],
       "availableService": [
-        {
-          "@type": "MedicalProcedure",
-          "name": "Sueroterapia IV",
-          "description": "Administración intravenosa de vitaminas y nutrientes: Rejuvemax, Rejuvecell, Glutatión, NAD+, Quelación y Elixir Oncomax. Para fatiga, resaca, inmunidad y apoyo oncológico.",
-          "performer": "Dra. Blanca Romero"
-        },
-        {
-          "@type": "MedicalProcedure",
-          "name": "Terapia con Células Madre",
-          "description": "Regeneración celular para enfermedades autoinmunes (lupus, artritis), diabetes, degenerativas y uso estético. Aplicación intravenosa personalizada.",
-          "performer": "Dra. Blanca Romero"
-        },
-        {
-          "@type": "MedicalProcedure",
-          "name": "Implante de Placenta Liofilizada",
-          "description": "Bioregenerador subdérmico para menopausia, climaterio masculino, fatiga crónica, autoinmunidad y antienvejecimiento. Liberación gradual de factores de crecimiento.",
-          "performer": "Dra. Blanca Romero"
-        },
-        {
-          "@type": "MedicalProcedure",
-          "name": "Pellet Hormonal",
-          "description": "Implante de testosterona (hombres) o estrógenos/progesterona (mujeres). Equilibrio hormonal por 6 meses: mejora libido, energía, masa muscular y sueño.",
-          "performer": "Dra. Blanca Romero"
-        }
+        { "@type": "MedicalProcedure", "name": "Sueroterapia IV" },
+        { "@type": "MedicalProcedure", "name": "Terapia con Células Madre" },
+        { "@type": "MedicalProcedure", "name": "Implante de Placenta Liofilizada" },
+        { "@type": "MedicalProcedure", "name": "Pellet Hormonal" }
       ]
     }
     </script>
